[gd_scene load_steps=50 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://assets/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://textures/cursor.png" type="Texture" id=3]
[ext_resource path="res://scripts/cursor.gd" type="Script" id=4]
[ext_resource path="res://scripts/Ambient.gd" type="Script" id=5]
[ext_resource path="res://textures/Gui/widgets.png" type="Texture" id=6]
[ext_resource path="res://scripts/hotbar.gd" type="Script" id=7]
[ext_resource path="res://scripts/select.gd" type="Script" id=8]
[ext_resource path="res://scripts/entities.gd" type="Script" id=9]
[ext_resource path="res://textures/Gui/inventory.png" type="Texture" id=10]
[ext_resource path="res://scripts/Inventory.gd" type="Script" id=11]
[ext_resource path="res://textures/Blocks/grass_block.png" type="Texture" id=12]
[ext_resource path="res://scripts/iconCursor.gd" type="Script" id=13]
[ext_resource path="res://fonts/Regular.tres" type="DynamicFont" id=14]
[ext_resource path="res://textures/Gui/furnace.png" type="Texture" id=15]
[ext_resource path="res://textures/Gui/crafting_table.png" type="Texture" id=16]
[ext_resource path="res://scripts/furnace.gd" type="Script" id=17]
[ext_resource path="res://textures/Gui/icons.png" type="Texture" id=18]
[ext_resource path="res://scripts/Hearts.gd" type="Script" id=19]
[ext_resource path="res://scripts/HungerBar.gd" type="Script" id=20]
[ext_resource path="res://textures/Gui/BackgroundCursor.png" type="Texture" id=21]
[ext_resource path="res://scripts/Lighting.gd" type="Script" id=22]
[ext_resource path="res://textures/environment/Sly3.png" type="Texture" id=23]
[ext_resource path="res://textures/environment/MidLayer.png" type="Texture" id=24]
[ext_resource path="res://textures/environment/BackLayer.png" type="Texture" id=25]
[ext_resource path="res://textures/environment/FrontLayer.png" type="Texture" id=26]
[ext_resource path="res://textures/environment/sky.png" type="Texture" id=27]
[ext_resource path="res://textures/Blocks/dirt.png" type="Texture" id=28]
[ext_resource path="res://textures/Gui/container/shulker_box.png" type="Texture" id=29]
[ext_resource path="res://scripts/waterSystem.gd" type="Script" id=30]
[ext_resource path="res://scene/Sky.tscn" type="PackedScene" id=31]
[ext_resource path="res://Audio/ui/click.ogg" type="AudioStream" id=32]
[ext_resource path="res://scripts/GUI.gd" type="Script" id=33]

[sub_resource type="OpenSimplexNoise" id=14]
octaves = 4
period = 87.0
persistence = 0.767
lacunarity = 1.88

[sub_resource type="OpenSimplexNoise" id=15]
period = 131.8

[sub_resource type="OpenSimplexNoise" id=16]
octaves = 4
period = 133.6
persistence = 0.492

[sub_resource type="OpenSimplexNoise" id=13]
octaves = 4
period = 15.0
persistence = 0.185
lacunarity = 3.54

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 176, 83 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 176, 83 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 15 )
region = Rect2( 177, 14, 22, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 15 )
region = Rect2( 176, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 29 )
region = Rect2( 0, 0, 176, 83 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 18 )
region = Rect2( 0, 64, 182, 5 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 18 )
region = Rect2( 0, 69, 182, 5 )

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;

uniform vec3 color = vec3(1,1,1.2);

void fragment() {
	COLOR = texture(TEXTURE,UV) * vec4(color,1);
}"

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )
shader_param/color = Vector3( 1, 1, 1.2 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 0, 66, 200, 20 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 0, 46, 200, 20 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 0, 86, 200, 20 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
noise = SubResource( 14 )
temps = SubResource( 15 )
precip = SubResource( 16 )
cave = SubResource( 13 )

[node name="chunks" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 2 )]
collision_layer = 4

[node name="cursor" type="Sprite" parent="."]
z_index = 5
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="blockSlowdown" type="Timer" parent="cursor"]
wait_time = 0.1
one_shot = true

[node name="destroy" type="Sprite" parent="cursor"]
visible = false

[node name="back" type="Sprite" parent="cursor"]
visible = false
z_index = -1
texture = ExtResource( 21 )

[node name="breaking" type="AudioStreamPlayer" parent="cursor"]

[node name="breakingEnd" type="Timer" parent="cursor"]
wait_time = 0.22
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 33 )

[node name="hotbar" type="Sprite" parent="CanvasLayer"]
position = Vector2( 960, 1025 )
scale = Vector2( 5, 5 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 182, 22 )
script = ExtResource( 7 )

[node name="select" type="Sprite" parent="CanvasLayer/hotbar"]
position = Vector2( -80, 0 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 22, 24, 24 )
script = ExtResource( 8 )

[node name="Inventory" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 958, 475 )
scale = Vector2( 5, 5 )
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 0, 0, 176, 166 )
script = ExtResource( 11 )

[node name="iconCursor" type="Sprite" parent="CanvasLayer/Inventory"]
visible = false
z_index = 5
texture = ExtResource( 12 )
script = ExtResource( 13 )

[node name="Label" type="Label" parent="CanvasLayer/Inventory/iconCursor"]
margin_left = -2.16559
margin_top = 0.588043
margin_right = 57.8344
margin_bottom = 50.588
rect_scale = Vector2( 0.2, 0.2 )
custom_colors/font_color_shadow = Color( 0.321569, 0.321569, 0.321569, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 14 )
text = "64"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="craftingTable" type="TextureRect" parent="CanvasLayer"]
visible = false
margin_left = 518.0
margin_top = 60.0
margin_right = 694.0
margin_bottom = 143.0
rect_scale = Vector2( 5, 5 )
texture = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="furnace" type="TextureRect" parent="CanvasLayer"]
visible = false
margin_left = 518.0
margin_top = 60.0
margin_right = 694.0
margin_bottom = 143.0
rect_scale = Vector2( 5, 5 )
texture = SubResource( 2 )
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="progress" type="TextureProgress" parent="CanvasLayer/furnace"]
margin_left = 80.0
margin_top = 34.0
margin_right = 102.0
margin_bottom = 50.0
max_value = 22.0
value = 15.0
texture_progress = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fire" type="TextureProgress" parent="CanvasLayer/furnace"]
margin_left = 56.0
margin_top = 36.0
margin_right = 70.0
margin_bottom = 50.0
max_value = 14.0
value = 14.0
texture_progress = SubResource( 4 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chestSmall" type="TextureRect" parent="CanvasLayer"]
visible = false
margin_left = 518.0
margin_top = 60.0
margin_right = 694.0
margin_bottom = 143.0
rect_scale = Vector2( 5, 5 )
texture = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bars" type="Node2D" parent="CanvasLayer"]

[node name="XpBar" type="TextureProgress" parent="CanvasLayer/Bars"]
margin_left = 505.0
margin_top = 934.0
margin_right = 687.0
margin_bottom = 939.0
rect_scale = Vector2( 5, 5 )
max_value = 182.0
texture_under = SubResource( 6 )
texture_progress = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hearts" type="Node2D" parent="CanvasLayer/Bars"]
position = Vector2( 525.5, 908 )
scale = Vector2( 4.5, 4.5 )
script = ExtResource( 19 )

[node name="HungerBar" type="Node2D" parent="CanvasLayer/Bars"]
position = Vector2( 1383.5, 908 )
scale = Vector2( 4.5, 4.5 )
script = ExtResource( 20 )

[node name="Pos" type="Label" parent="CanvasLayer"]
visible = false
margin_right = 288.0
margin_bottom = 173.0
rect_scale = Vector2( 5, 5 )
text = "()"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 4.23303
margin_top = 81.4865
margin_right = 50.233
margin_bottom = 95.4865
rect_scale = Vector2( 5, 5 )
text = "Fps: 60"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 2.9967
margin_top = 161.817
margin_right = 95.9967
margin_bottom = 175.817
rect_scale = Vector2( 5, 5 )
text = "Light Level: 15"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EC" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 2.997
margin_top = 240.0
margin_right = 95.997
margin_bottom = 254.0
rect_scale = Vector2( 5, 5 )
text = "EC: 0"

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="Sky" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.01 )
motion_offset = Vector2( 0, -400 )
motion_mirroring = Vector2( 1440, 0 )

[node name="Sky" type="Sprite" parent="CanvasLayer/ParallaxBackground/Sky"]
material = SubResource( 9 )
scale = Vector2( 0.75, 0.75 )
z_index = -50
texture = ExtResource( 23 )
centered = false

[node name="BackLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.1, 0.1 )
motion_offset = Vector2( 0, -200 )
motion_mirroring = Vector2( 960, 0 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/ParallaxBackground/BackLayer"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 25 )
centered = false

[node name="MidLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.3, 0.4 )
motion_offset = Vector2( 0, 100 )
motion_mirroring = Vector2( 960, 0 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/ParallaxBackground/MidLayer"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 24 )
centered = false

[node name="FrontLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.6, 0.45 )
motion_offset = Vector2( 0, 150 )
motion_mirroring = Vector2( 960, 0 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/ParallaxBackground/FrontLayer"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 26 )
centered = false

[node name="Menu" type="Control" parent="CanvasLayer"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Menu"]
modulate = Color( 0.207843, 0.207843, 0.207843, 0.470588 )
margin_left = -3.0
margin_top = -1.0
margin_right = 13.0
margin_bottom = 15.0
rect_scale = Vector2( 122, 70 )
texture = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="CanvasLayer/Menu"]
margin_left = 560.0
margin_top = 300.0
margin_right = 760.0
margin_bottom = 319.0
rect_scale = Vector2( 4, 4 )
texture_normal = SubResource( 10 )
texture_pressed = SubResource( 11 )
texture_hover = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Menu/Quit"]
margin_top = 0.116104
margin_right = 668.0
margin_bottom = 66.1161
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color_shadow = Color( 0.34902, 0.34902, 0.34902, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 14 )
text = "Quit To Menu"
align = 1
valign = 1

[node name="click" type="AudioStreamPlayer" parent="CanvasLayer/Menu"]
stream = ExtResource( 32 )

[node name="Loading" type="TextureRect" parent="CanvasLayer"]
visible = false
margin_right = 384.0
margin_bottom = 216.0
rect_scale = Vector2( 5, 5 )
texture = ExtResource( 28 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Loading"]
margin_left = 164.5
margin_top = 101.75
margin_right = 384.5
margin_bottom = 151.75
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = ExtResource( 14 )
text = "Loading..."

[node name="entities" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="Lighting" type="Node2D" parent="."]
script = ExtResource( 22 )

[node name="Update" type="Timer" parent="Lighting"]
wait_time = 0.05

[node name="DaylightCycle" type="Timer" parent="Lighting"]
wait_time = 480.0
one_shot = true

[node name="water" type="Node2D" parent="."]
script = ExtResource( 30 )

[node name="Timer" type="Timer" parent="water"]
wait_time = 0.25

[node name="Ambient" type="AudioStreamPlayer" parent="."]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="Ambient"]
one_shot = true

[node name="Entity" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = -1

[node name="ViewportContainer" type="ViewportContainer" parent="CanvasLayer2"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
stretch = true

[node name="Viewport" type="Viewport" parent="CanvasLayer2/ViewportContainer"]
size = Vector2( 1920, 1080 )
handle_input_locally = false
render_target_update_mode = 0

[node name="Spatial" parent="CanvasLayer2/ViewportContainer/Viewport" instance=ExtResource( 31 )]

[connection signal="start" from="." to="Player" method="_on_Node2D_start"]
[connection signal="start" from="." to="cursor" method="_on_Node2D_start"]
[connection signal="world_loaded" from="." to="Player" method="_on_Node2D_world_loaded"]
[connection signal="world_loaded" from="." to="entities" method="_on_Node2D_world_loaded"]
[connection signal="world_loaded" from="." to="Lighting" method="_on_Node2D_world_loaded"]
[connection signal="world_loaded" from="." to="water" method="_on_Node2D_world_loaded"]
[connection signal="timeout" from="cursor/blockSlowdown" to="cursor" method="_on_blockSlowdown_timeout"]
[connection signal="timeout" from="cursor/breakingEnd" to="cursor" method="_on_breakingEnd_timeout"]
[connection signal="pressed" from="CanvasLayer/Menu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="timeout" from="Lighting/DaylightCycle" to="Lighting" method="_on_Daylight_Cycle_timeout"]
[connection signal="timeout" from="water/Timer" to="water" method="_on_Timer_timeout"]
[connection signal="timeout" from="Ambient/Timer" to="Ambient" method="_on_Timer_timeout"]
[connection signal="timeout" from="Entity" to="entities" method="_on_Entity_timeout"]
